--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Лабораторные работы</h1>
+    <ul>
+        <li>Задание 1</li>
+        <li>Задание 2</li>
+        <li>Задание 3</li>
+        <li>Задание 4</li>
+        <li>Задание 5</li>
+    </ul>
 </body>
 </html>
