--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Лабораторные работы</h1>
     <ul>
-        <li>Задание 1</li>
+        <li><a href="lab1/lab1_1.html">Задание 1</a></li>
         <li>Задание 2</li>
         <li>Задание 3</li>
         <li>Задание 4</li>
