--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML&amp;CSS</title>
+  <meta charset="UTF-8">
+  <title>Индекс</title>
 </head>
 <body>
-    <h1>Лабораторные работы</h1>
-    <ul>
-        <li><a href="lab1/lab1_1.html">Задание 1</a></li>
-        <li>Задание 2</li>
-        <li>Задание 3</li>
-        <li>Задание 4</li>
-        <li>Задание 5</li>
-    </ul>
+  <h1>Лабораторные работы</h1>
+  <a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a>
+  <a href="lab1/navigation.html">Задание 2. Навигация в тексте</a>
+  <a href="lab1/doc.html">Задание 3. Гиперссылки</a>
+  <a href="lab1/images.html">Задание 4. Картинки</a>
+  <a href="lab1/image_url.html">Задание 5. Гиперссылки в картинке</a>
 </body>
 </html>
