--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Лабораторные работы</h1>
   <a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a>
-  <a href="lab1/navigation.html">Задание 2. Навигация в тексте</a>
+  <a href="lab1/lab1_2.html">Задание 2. Навигация в тексте</a>
   <a href="lab1/doc.html">Задание 3. Гиперссылки</a>
   <a href="lab1/images.html">Задание 4. Картинки</a>
   <a href="lab1/image_url.html">Задание 5. Гиперссылки в картинке</a>
