--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
   <title>Индекс</title>
 </head>
 <body>
-<h1>Лабораторные работы</h1>
-<nav> 
+<h1>Лабораторная работа 1</h1>
+<u1> 
   <a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a>
   <a href="lab1/lab1_2.html">Задание 2. Навигация в тексте</a>
   <a href="lab1/doc.html">Задание 3. Гиперссылки</a>
   <a href="lab1/images.html">Задание 4. Картинки</a>
   <a href="lab1/image_url.html">Задание 5. Гиперссылки в картинке</a>
-</nav>
- 
+</u1>
+<h1>Лабораторная работа 2</h1>
+<ul>
+  <li><a href="./lab2/lab2_1.html">Задание 1. Смешанный список</a></li>
+  <li><a href="./lab2/lab2_2.html">Задание 2. Таблицы</a></li>
+  <li><a href="./lab2/lab2_3.html/index.html">Задание 3. Описание структуры</a></li>
+  <li><a href="./lab2/lab2_4.html">Задание 4. Встраиваемый контент</a></li>
+  <li><a href="./lab2/lab2_5.html">Задание 5. Форма регистрации</a></li>
+</ul>
 </body>
 </html>
