--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
 <h1>Лабораторная работа 1</h1>
 <u1> 
-  <a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a>
-  <a href="lab1/lab1_2.html">Задание 2. Навигация в тексте</a>
-  <a href="lab1/doc.html">Задание 3. Гиперссылки</a>
-  <a href="lab1/images.html">Задание 4. Картинки</a>
-  <a href="lab1/image_url.html">Задание 5. Гиперссылки в картинке</a>
+  <li><a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a></li>
+  <li><a href="lab1/lab1_2.html">Задание 2. Навигация в тексте</a></li>
+  <li><a href="lab1/doc.html">Задание 3. Гиперссылки</a></li>
+  <li><a href="lab1/images.html">Задание 4. Картинки</a></li>
+  <li><a href="lab1/image_url.html">Задание 5. Гиперссылки в картинке</a></li>
 </u1>
 <h1>Лабораторная работа 2</h1>
 <ul>
