--- a/lab2/lab2_2.html
+++ b/lab2/lab2_2.html
@@ -25,11 +25,11 @@
             <tbody>
                 <tr>
                     <th rowspan="2">1</th>
-                    <th colspan="2">2</th>
+                    <td colspan="2">2</td>
                 </tr>
                 <tr>
-                    <th>5</th>
-                    <th>6</th>
+                    <td>5</td>
+                    <td>6</td>
                 </tr>                
             </tbody>
         </table>
@@ -41,11 +41,11 @@
                     <th colspan="2">1</th>
                 </tr>
                 <tr>
-                    <th rowspan="2">3</th>
-                    <th>4</th>
+                    <td rowspan="2">3</td>
+                    <td>4</td>
                 </tr>
                 <tr>
-                    <th>6</th>
+                    <td>6</td>
                 </tr>
             </tbody>
         </table>
@@ -54,14 +54,14 @@
             <caption>3 таблица</caption>
             <tbody>
                 <tr>
-                    <th>1</th>
-                    <th rowspan="2">2</th>
+                    <td>1</td>
+                    <td rowspan="2">2</td>
                 </tr>
                 <tr>
-                    <th>3</th>
+                    <td>3</td>
                 </tr>
                 <tr>
-                    <th colspan="2">5</th>
+                    <td colspan="2">5</td>
                 </tr>
             </tbody>
         </table>
@@ -73,11 +73,11 @@
                     <th colspan="2">1</th>
                 </tr>
                 <tr>
-                    <th>3</th>
-                    <th>4</th>
+                    <td>3</td>
+                    <td>4</td>
                 </tr>
                 <tr>
-                    <th colspan="2">5</th>
+                    <td colspan="2">5</td>
                 </tr>
             </tbody>
         </table>
