--- a/lab2/lab2_5.html
+++ b/lab2/lab2_5.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Форма регистрации пользователя</h1>
-    <form action="#">
+    <form method="post">
         <table>
             <tbody>
                 <tr>
