--- a/lab2/lab2_4.html
+++ b/lab2/lab2_4.html
@@ -46,7 +46,7 @@
         <figure>
             <iframe
                 src="https://yandex.ru/map-widget/v1/org/fgbou_vo_orlovskiy_gosudarstvenny_universitet_imeni_i_s_turgeneva/1030860442/?from=api-maps&ll=36.063909%2C52.951255&utm_source=share&z=17"
-                width="560" height="400" frameborder="1" allowfullscreen="true"
+                width="560" height="400" allowfullscreen
                 style="position:relative;"></iframe>
             <figcaption>Карта г.Орёл</figcaption>
         </figure>
