--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
   <li><a href="./lab2/lab2_4.html">Задание 4. Встраиваемый контент</a></li>
   <li><a href="./lab2/lab2_5.html">Задание 5. Форма регистрации</a></li>
 </ul>
+<h1>Лабораторная работа 3</h1>
+<ul>
+  <li><a href="./lab3/lab_3_1.html">Задание 1. Основной текст</a></li>
+  <li><a href="./lab3/lab_3_2.html">Задание 2. Новый стиль</a></li>
+  <li><a href="./lab3/lab_3_2_my.html">Задание 3. Мой стиль</a></li>
+</ul>
 </body>
 </html>
