--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
   <li><a href="./lab3/lab_3_2.html">Задание 2. Новый стиль</a></li>
   <li><a href="./lab3/lab_3_2_my.html">Задание 3. Мой стиль</a></li>
 </ul>
+<h1>Лабораторная работа 4</h1>
+<ul>
+  <li><a href="./lab4/lab_4_1.html">Задание 1. Список</a></li>
+  <li><a href="./lab4/lab_4_2.html">Задание 2. Развёрнутый список</a></li>
+  <li><a href="./lab4/lab_4_3.html">Задание 3. Использование спрайт для списка</a></li>
+  <li><a href="./lab4/lab_4_4.html">Задание 4. Замена маркеров</a></li>
+  <li><a href="./lab4/lab_4_5.html">Задание 5. Раскрывающееся меню</a></li>
+</ul>
 </body>
 </html>
