--- a/lab4/lab_4_1.html
+++ b/lab4/lab_4_1.html
@@ -8,7 +8,7 @@
  <style>
   .menu {
    width: 200px;
-   background: rgb(109, 157, 215); 
+   background: rgb(84, 150, 204); 
   }
 
   .menu ul {
@@ -24,15 +24,15 @@
 
   .menu li a {
    display: block; 
-   padding: 10px; 
+   padding: 14px; 
    text-transform: uppercase; 
    text-decoration: none; 
-   background-color: rgb(255, 255, 255); 
-   color: rgb(129, 203, 248); 
+   background-color: rgb(209, 199, 234); 
+   color: rgb(81, 33, 25); 
   }
 
   .menu li a:hover {
-   background-color: #6cb; 
+   background-color: rgba(115, 136, 208, 0.638); 
    color: #eee; 
   }
  </style>
