--- a/lab4/lab_4_1.html
+++ b/lab4/lab_4_1.html
@@ -8,7 +8,7 @@
  <style>
   .menu {
    width: 200px;
-   background: rgb(84, 150, 204); 
+   background:#369; 
   }
 
   .menu ul {
@@ -18,22 +18,22 @@
 }
 
 .menu li {
-  margin: 5px 0; 
-  padding: 0; 
+  margin: 0; 
+  padding: 5px 0; 
 }
 
   .menu li a {
    display: block; 
-   padding: 14px; 
+   padding: 10px; 
    text-transform: uppercase; 
    text-decoration: none; 
-   background-color: rgb(209, 199, 234); 
-   color: rgb(81, 33, 25); 
+   background-color: #fff; 
+   color: #69d; 
   }
 
   .menu li a:hover {
-   background-color: rgba(115, 136, 208, 0.638); 
-   color: #eee; 
+   background-color: #ffc; 
+   color: #036; 
   }
  </style>
 </head>
