--- a/lab4/lab_4_4.html
+++ b/lab4/lab_4_4.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
         html {
-            background: #dfd7d7;
+            background: #f0f0f0;
         }
 
         .menu {
