--- a/lab4/lab_4_5.html
+++ b/lab4/lab_4_5.html
@@ -6,12 +6,12 @@
     <title>Оформление вертикального меню</title>
     <style>
         html {
-            background: #e9eed8;
+            background: #f0f0f0;
         }
 
         .menu {
             width: 200px;
-            background: #dbe4f1;
+            background: #fff;
             font-family: Arial, sans-serif;
         }
 
@@ -50,7 +50,7 @@
         }
 
         .menu li a:hover {
-            background-color: #f2cece;
+            background-color: #f0f0f0;
         }
 
         .menu ul ul {
