--- a/lab4/lab_4_3.html
+++ b/lab4/lab_4_3.html
@@ -6,7 +6,7 @@
     <title>Оформление вертикального меню</title>
     <style>
         html {
-            background: #dfd7d7;
+            background: #f0f0f0;
         }
 
         .menu {
