--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Лабораторная работа 1</h1>
-<ul> 
+<ul>
   <li><a href="lab1/lab1_1.html">Задание 1. Работа с текстом</a></li>
   <li><a href="lab1/lab1_2.html">Задание 2. Навигация в тексте</a></li>
   <li><a href="lab1/doc.html">Задание 3. Гиперссылки</a></li>
@@ -34,6 +34,14 @@
   <li><a href="./lab4/lab_4_3.html">Задание 3. Использование спрайт для списка</a></li>
   <li><a href="./lab4/lab_4_4.html">Задание 4. Замена маркеров</a></li>
   <li><a href="./lab4/lab_4_5.html">Задание 5. Раскрывающееся меню</a></li>
+</ul>
+<h1>Лабораторная работа 5</h1>
+<ul>
+  <li><a href="./lab5/lab5_1.html">Задание 1. Горизонтальное меню</a></li>
+  <li><a href="./lab5/lab5_2.html">Задание 2. Использование float при построении колонок</a></li>
+  <li><a href="./lab5/lab5_3.html">Задание 3. Использование display с inline-block</a></li>
+  <li><a href="./lab5/lab5_4.html">Задание 4. Использование display с flex</a></li>
+  <li><a href="./lab5/lab5_5.html">Задание 5. Использование display с grid</a></li>
 </ul>
 </body>
 </html>
