--- a/lab5/lab5_2.html
+++ b/lab5/lab5_2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Три колонки</title>
+    <title>Использование float при построении колонок</title>
     <style>
         * {
             box-sizing: border-box; 
@@ -45,7 +45,6 @@
 </head>
 <body>
 
-    <h2> Использование float</h2>
     <div class="float-container">
         <div id="left">left<br>left<br>left<br>left<br>left</div>
         <div id="center">center text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text</div>
