--- a/lab5/lab5_3.html
+++ b/lab5/lab5_3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Три колонки</title>
     <style>
-         
+
         .inline-block-container {
             text-align: left; 
         }
@@ -22,7 +22,7 @@
 
         #center-inline {
             display: inline-block;
-            width: 600px;
+            width: calc(100% - 600px);
             background: #cfc;
             margin-right: 10px; 
         }
