--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
   <li><a href="./lab5/lab5_4.html">Задание 4. Использование display с flex</a></li>
   <li><a href="./lab5/lab5_5.html">Задание 5. Использование display с grid</a></li>
 </ul>
+<h1>Лабораторная работа 6</h1>
+<ul>
+  <li><a href="https://qwr14.github.io/mamon/">Задание 1. Mamon</a></li>
+</ul>
 </body>
 </html>
