--- a/lab7/me.html
+++ b/lab7/me.html
@@ -24,11 +24,11 @@
     <div class="container">
       <header style="padding-top: 5px">
         <div id="logo" style="float: left">
-          <img src="m/logo.png" width="100" height="90" alt="moon.png" />
+          <img src="img/logo.png" width="100" height="90" alt="moon.png" />
         </div>
         <div id="contacts" style="float: right">
-          <i class="fa fa-mobile fa-lg"></i> +7-800-535-35-35|
-          <i class="fa fa-envelope fa-lg"></i> info@abibas.ru
+          <i class="fa fa-mobile fa-lg"></i> +7-984-462-97-62|
+          <i class="fa fa-envelope fa-lg"></i> klavdisign.ru
           <i
             class="fa fa-facebook-square fa-2x"
             style="margin-left: 10px; color: blue"
@@ -55,14 +55,14 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Главная</a></li>
             <li><a href="#main">О компании</a></li>
-            <li><a href="#method">Наш методы</a></li>
+            <li><a href="#method">Наши методы</a></li>
             <li><a href="#work">Наши проекты</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a href="#" style="padding-top: 8px; padding-bottom: 8px">
                 <span class="btn btn-danger"
-                  ><strong>Позвонить Джамшуту</strong></span
+                  ><strong>Заказать кнопочку</strong></span
                 ></a
               >
             </li>
@@ -71,7 +71,7 @@
       </nav>
 
       <div id="header-bottom" style="position: relative">
-        <img src="m/ssss.jpg" style="width: 100%" alt="ssss.jpg" />
+        <img src="img/wwee.jpg" style="width: 100%" alt="wwee.jpg" />
         <div
           id="bannertext"
           style="
@@ -79,13 +79,13 @@
             top: 10%;
             width: 100%;
             text-align: center;
-            color: white;
+            color: rgb(155, 35, 105);
           "
         >
           <div class="hidden-xs">
             <h1>
               Мы предлагаем<br />
-              <small style="color: white"
+              <small style="color: rgb(155, 35, 105)"
                 >всё что захочешь, всё сделаем для тебя дорогой</small
               >
             </h1>
