--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
 <ul>
   <li><a href="https://qwr14.github.io/mamon/">Задание 1. Mamon</a></li>
 </ul>
+<h1>Лабораторная работа 7</h1>
+<ul>
+  <li><a href="lab7/lab7_1.html">Задание 1. Шаблон сайта</a></li>
+</ul>
 </body>
 </html>
