--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <h1>Лабораторная работа 7</h1>
 <ul>
   <li><a href="lab7/lab7_1.html">Задание 1. Шаблон сайта</a></li>
+  <li><a href="lab7/lab7_2.html">Задание 2. Сайт</a></li>
 </ul>
 </body>
 </html>
